# llmtext

./: .env.example  .gitignore  LICENSE  README.md  prompts_and_score.csv  prompts_scores.csv  pyproject.toml  test.json
llmtext/: __init__.py  main.py
llmtext/agent/: __init__.py
llmtext/agents/: base.py  simple_agent.py
llmtext/chat/: __init__.py  index.py
llmtext/chat_llms/: __init__.py  base.py  openai.py  togetherai.py
llmtext/classes/: qa_citation.py
llmtext/context_management/: base.py
llmtext/data_types/: __init__.py
llmtext/llm/: __init__.py
llmtext/llms/: __init__.py  base.py  openai.py  togetherai.py
llmtext/long_context_llm/: base.py  openai_long_context_llm.py
llmtext/messages_fns/: __init__.py
llmtext/prompt_optimizer/: __init__.py
llmtext/prompts/: system_messages.py
llmtext/scripts/: __init__.py  lint.py  publish.py  start.py  test.py
llmtext/text/: __init__.py  index.py
llmtext/text_splitter/: base.py
llmtext/texts_fns/: __init__.py
llmtext/tools/: __init__.py  base.py
llmtext/utils/: merge_deltas.py  tracing.py
llmtext/utils_fns/: __init__.py
llmtext/vector_stores/: base.py  lancedb.py
llmtext/workflows_fns/: __init__.py
scripts/: cli.py  lint.py  publish.py  start.py  test.py
tests/: __init__.py  test_llm.py  test_prompt_optimizer.py
tests/agent/: test_deepseek_agent.py  test_deepseekcoder_agent.py  test_gemini_agent.py  test_haiku_agent.py  test_openai_agent.py
tests/chat/: test_chat_openai.py  test_chat_togetherai.py
tests/chat_llms/: test_chat_openai.py  test_chat_togetherai.py
tests/classes/: test_qa_citation.py
tests/llms/: output.md  raw.txt  test_llm_openai.py  test_llm_togetherai.py  test_openai.py  test_togetherai.py
tests/pubsub/: test_pubsub.py
tests/test_workflow/: test_messages.py  test_text.py  test_workflows.py
tests/text/: README.md  test_instructor.py  test_text_deepseek.py  test_text_gemini.py  test_text_haiku.py  test_text_mistralai.py  test_text_mythomax.py  test_text_openai.py  test_text_openrouter.py  test_text_togetherai.py
(+2 files in other folders)
