[tool.poetry]
name = "llmtext"
version = "2.0.0"
description = "A simple llm library."
authors = ["vikyw89 <vikyw89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
together = "^1.2.0"
python-dotenv = "^1.0.0"
instructor = "^1.3.0"
typer = "^0.12.0"
spacy = "^3.7.0"
nest-asyncio = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llmtext = "llmtext.scripts.cli:app"
start = "llmtext.scripts.start:run"
lint = "llmtext.scripts.lint:run"
publish = "llmtext.scripts.publish:run"
test = "llmtext.scripts.test:run"