[tool.poetry]
name = "llmtext"
version = "4.0.5"
description = "A simple llm library."
authors = ["vikyw89 <vikyw89@gmail.com>"]
readme = "README.md"
include = ["scripts"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
instructor = "^1.3.0"
pydantic = "2.7.*"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.0"
ruff = "^0.4.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "scripts.start:run"
lint = "scripts.lint:run"
publish = "scripts.publish:run"
test = "scripts.test:run"